# oidc-provider

./: .envrc  .gitignore  .kodiak.toml  .pre-commit-config.yaml  CODING.md  README.md  app.py  nixpkgs.json  package-lock.json  package.json  pyproject.toml  reset-dev-env.bash  shell.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml
node2nix/: node-packages.nix
