[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 127

[tool.isort]
line_length = 127
case_sensitive = true
profile = "black"

[tool.mypy]
show_error_codes = true
strict = true

[tool.poetry]
name = "oidc-provider"
version = "0.1.0"
description = "AWS Python CDK Template for deploying OIDC provider"
authors = [
    "Amrou Emad <aemad@linz.govt.nz>",
    "Ben Cheng <42329567+Ben-Cheng@users.noreply.github.com>",
    "Bill Nelson <bmnelson@linz.govt.nz>",
    "Blayne Chard <bchard@linz.govt.nz>",
    "Daniel Silk <dsilk@linz.govt.nz>",
    "Jim Gan <jgan@linz.govt.nz>",
    "Victor Engmark <vengmark@linz.govt.nz>",

]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
typer = "*"
aws-cdk-lib = "^2.65.0"

[tool.poetry.dev-dependencies]
black = "*"
gitlint = "*"
isort = "*"
language-formatters-pre-commit-hooks = "*"
mypy = "*"
pre-commit = "*"
pylint = "*"
pytest = "*"
pytest-randomly = "*"
typed-ast = "*"

[tool.pylint.FORMAT]
max-line-length = 127

[tool.pylint.MASTER]
disable = [
    "bad-continuation",
    "duplicate-code",
    "invalid-name",
    "missing-docstring",
    "too-few-public-methods",
]
